# ESM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.doc/: demo.c  项目框架.txt  (+3 more)
main/: CMakeLists.txt  main.c
main/algorithm/: algorithm.c  algorithm.h
main/algorithm/current_loop/: current_loop.c  current_loop.h
main/algorithm/foc_core/: foc_core.c  foc_core.h
main/algorithm/observer/: observer.c  observer.h
main/algorithm/speed_loop/: speed_loop.c  speed_loop.h
main/algorithm/svpwm/: svpwm.c  svpwm.h
main/bsp/: bsp.c  bsp.h  bsp_hal.h  bsp_interface.c  bsp_interface.h  bsp_require_drv_hal.h  bsp_status.h
main/bsp/board/: board.c  board.h
main/bsp/clock/: bsp_clock.c  bsp_clock.h
main/bsp/current_sensor/: bsp_current_sensor.c  bsp_current_sensor.h
main/bsp/encoder/: bsp_encoder.c  bsp_encoder.h
main/bsp/gpio/: bsp_gpio.c  bsp_gpio.h
main/bsp/mcpwm/: bsp_mcpwm.c  bsp_mcpwm.h
main/bsp/nvs/: bsp_nvs.c  bsp_nvs.h
main/bsp/spi_encoder/: bsp_spi_encoder.c  bsp_spi_encoder.h
main/bsp/timer/: bsp_timer.c  bsp_timer.h
main/bsp/uart/: bsp_uart.c  bsp_uart.h
main/config/: foc_config.c  foc_config.h
main/driver/: driver.c  driver.h
main/driver/can/: driver_can.c  driver_can.h
main/driver/current_sensor/: adc_etm_ll.c  adc_etm_ll.h  analog.c  analog.h  driver_current_sensor.c  driver_current_sensor.h
main/driver/encoder/: driver_encoder.h  encoder_as5047p.c
main/driver/mcpwm/: driver_mcpwm.c  driver_mcpwm.h
main/driver/spi/: driver_spi.c  driver_spi.h
main/task/: task_layer.c  task_layer.h
main/task/comm/: task_comm.c  task_comm.h
(+10 files in other folders)
